SUBDIRS = src tests

distclean-local:
	rm -rf autom4te.cache \
       	  config.log config.status config.h config.h.in \
	  aclocal.m4 configure Makefile src/Makefile tests/Makefile \
	  src/*.o src/*.lo src/*.la src/.libs \
	  tests/*.o tests/*.lo tests/*.la tests/.libs \
	  tests/test_uidresp tests/test-suite.log \
	  uidresp ./*~ compile depcomp install-sh config.guess config.sub \
	  Makefile.in src/Makefile.in tests/Makefile.in \
	  ltmain.sh test-driver missing \
	  src/.deps tests/.deps

